1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* control.[hm] (tkobjc_gimme_drag_and_drop_object): Renamed from
	tkobjc_gimme_ddobj.

	* DragDrop.m (new_BLT_p): New function.
	(oldSetupDragAndDrop): New function.
	(newSetupDragAndDrop): New function.
	(setupDragAndDrop): New function.
	(oldSetupDragAndDropArg): New function.
	(newSetupDragAndDropArg): New function.
	(setupDragAndDropArg): New function.
	(oldSetupHandler): New function.
	(newSetupHandler): New function.
	(setupHandler): New function.
	(setupDragAndDrop): Use new functions newSetupDragAndDrop and
	oldSetupDragAndDrop.
	(setupDragAndDropArg): New function.
	(dragAndDrop): Use new function setupHandler.
	(dragAndDropArg): Use new functions setupDragAndDropArg and
	setupHandler.

	* WindowGeometryRecord.m: Include collections/predicates.h.

	* TkExtra.m ([TkExtra -preInitWithArgc:argv:]): Constify return
	of preInitWithArgc.  Minor reformatting.

	* tkobjc.m (initTkObjc): Update to renamed tkobjc_registerCommand.

	* simtools.tcl: Add `super' bitmap.

	* control.[hm]: Prefix everybody with "tkobjc_".  Add
	tkobjc_configureHideBitmap, tkobjc_configureSpecialBitmap,
	tkobjc_configureSuperBitmap, tkobjc_configureWidgetToBeep,
	tkobjc_configureWidgetToDrop,
	tkobjc_configureWidgetToPackBeforeAndFillLeftThenDisableAndResize,
	tkobjc_bindButton3ToSpawn, tkobjc_bindButton3ToArgSpawn,
	tkobjc_bindButton3ToBeUnhelpful, tkobjc_bindReturnToSetValue,
	tkobjc_bindKeyReleaseReturnToResetColorAndUpdate,
	tkobjc_bindFocusInToSetSelection,
	tkobjc_bindFocusOutToClearSelection, and tkobjc_gimme_ddobj.
	Renamed tkobjc_bindButton3ForCompleteProbeDisplay from
	configureButton3ForCompleteProbeDisplay, tkobjc_bindWindowEntry
	from configureWindowEntry, tkobjc_bindWindowExit from
	configureWindowExit.
	
1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* control.m (dynamicEval): Add.

	* control.h: Add dynamicEval.

	* InputWidget.m ([InputWidget -setValue:]): Constify argument.
	Reformatting throughout.