@@ -1,5 +1,12 @@
 1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* control.[hm]: Add new functions tkobjc_setupZoomStack,
+	tkobjc_setHistogramBarWidth, tkobjc_setHistogramXaxisRange,
+	tkobjc_setupHistogramMisc, tkobjc_setupHistogramLegend,
+	tkobjc_histogramActiveItemInfo,
+	tkobjc_setHistogramActiveOutlierText.  These features were
+	used in the analysis/EZBin and analysis/EZDistribution classes.
+
 	* control.[hm] (tkobjc_gimme_drag_and_drop_object): Renamed from
 	tkobjc_gimme_ddobj.
 
